feat(board-client)：优化彩票界面与棋盘路线可视性。