@@ -7,6 +7,7 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.Component;
+import net.minecraft.sounds.SoundEvents;
 import net.minecraft.util.FormattedCharSequence;
 import net.neoforged.neoforge.network.handling.IPayloadContext;
 import org.jspecify.annotations.NonNull;
@@ -25,6 +26,8 @@ public class BoardLotteryDrawScreen extends Screen {
     private int awardEach;
     private int timeoutTicks;
     private int timeoutDurationTicks;
+    private int lastAnimatedNumber = -1;
+    private boolean resultSoundPlayed;
 
     public BoardLotteryDrawScreen(OpenBoardLotteryDrawPayload payload) {
         super(Component.translatable("gui.astral_craft.board.lottery_draw.title"));
@@ -58,6 +61,12 @@ public class BoardLotteryDrawScreen extends Screen {
     }
 
     private void update(OpenBoardLotteryDrawPayload payload) {
+        if (this.phase == null || this.phase == OpenBoardLotteryDrawPayload.Phase.RESULT
+                && payload.phase() != OpenBoardLotteryDrawPayload.Phase.RESULT) {
+            this.resultSoundPlayed = false;
+            this.lastAnimatedNumber = -1;
+        }
+
         this.phase = payload.phase();
         this.finalNumber = payload.finalNumber();
         this.jackpot = payload.jackpot();
@@ -82,6 +91,22 @@ public class BoardLotteryDrawScreen extends Screen {
     public void tick() {
         super.tick();
         if (this.timeoutTicks > 0) this.timeoutTicks--;
+        Minecraft minecraft = Minecraft.getInstance();
+        if (minecraft.player == null) return;
+        if (this.phase == OpenBoardLotteryDrawPayload.Phase.RESULT) {
+            if (!this.resultSoundPlayed) {
+                minecraft.player.playSound(SoundEvents.NOTE_BLOCK_PLING.value(), 0.9F, 1.45F);
+                this.resultSoundPlayed = true;
+            }
+            return;
+        }
+
+        int number = this.animatedNumber();
+        if (number != this.lastAnimatedNumber) {
+            float pitch = 0.95F + number / 36.0F;
+            minecraft.player.playSound(SoundEvents.NOTE_BLOCK_HAT.value(), 0.45F, pitch);
+            this.lastAnimatedNumber = number;
+        }
     }
 
     @Override
@@ -105,10 +130,10 @@ public class BoardLotteryDrawScreen extends Screen {
         for (int number = 1; number <= 12; number++) {
             Cell cell = layout.cell(number);
             boolean highlighted = number == active;
-            graphics.fill(cell.x(), cell.y(), cell.x() + cell.size(),
-                    cell.y() + cell.size(), highlighted ? 0xFFDB9D35 : 0xFF303442);
-            graphics.fill(cell.x() + 2, cell.y() + 2, cell.x() + cell.size() - 2,
-                    cell.y() + cell.size() - 2, highlighted ? 0xFFFFC85B : 0xFF4A5064);
+            graphics.fill(cell.x(), cell.y(), cell.x() + cell.size(), cell.y() + cell.size(),
+                    highlighted ? 0xFFDB9D35 : 0xFF303442);
+            graphics.fill(cell.x() + 2, cell.y() + 2, cell.x() + cell.size() - 2, cell.y() + cell.size() - 2,
+                    highlighted ? 0xFFFFC85B : 0xFF4A5064);
             graphics.centeredText(this.font, Component.literal(Integer.toString(number)),
                     cell.x() + cell.size() / 2, cell.y() + (cell.size() - 8) / 2,
                     highlighted ? 0xFF1C1D24 : 0xFFFFFFFF);
@@ -120,12 +145,13 @@ public class BoardLotteryDrawScreen extends Screen {
             Component result = this.winnerNames.isEmpty()
                     ? Component.translatable("gui.astral_craft.board.lottery_draw.no_winner")
                     : Component.translatable("gui.astral_craft.board.lottery_draw.winner", this.winnerNames.size(), this.awardEach);
-            graphics.centeredText(this.font, result, centerX, centerY - 5, this.winnerNames.isEmpty() ? 0xFFBFC2D0 : 0xFF72D27B);
+            graphics.centeredText(this.font, result, centerX, centerY - 5,
+                    this.winnerNames.isEmpty() ? 0xFFBFC2D0 : 0xFF72D27B);
             if (!this.winnerNames.isEmpty()) {
-                List<FormattedCharSequence> lines = this.font.split(Component.literal(String.join(", ", this.winnerNames)), layout.boardInnerWidth());
+                List<FormattedCharSequence> lines = this.font.split(Component.literal(String.join(", ", this.winnerNames)),
+                        layout.boardInnerWidth());
                 for (int line = 0; line < Math.min(2, lines.size()); line++) {
-                    graphics.text(this.font, lines.get(line),
-                            centerX - this.font.width(lines.get(line)) / 2,
+                    graphics.text(this.font, lines.get(line), centerX - this.font.width(lines.get(line)) / 2,
                             centerY + 9 + line * 11, 0xFFFFFFFF, false);
                 }
             }
@@ -133,8 +159,8 @@ public class BoardLotteryDrawScreen extends Screen {
     }
 
     private void renderEntry(GuiGraphicsExtractor graphics, Layout layout, int index, OpenBoardLotteryDrawPayload.Entry entry) {
-        int rowY = layout.y() + 80 + index * 40;
-        int iconSize = 38;
+        int rowY = layout.entryRowY(index);
+        int iconSize = layout.entryIconSize();
         AstralStatusIconRenderer.renderCharacterSkinHead(graphics, entry.characterId(), entry.skinId().getPath(),
                 layout.listX(), rowY, iconSize, 255);
         int textX = layout.listX() + iconSize + 8;
@@ -169,16 +195,20 @@ public class BoardLotteryDrawScreen extends Screen {
     private record Layout(int x, int y, int width, int height) {
 
         private int listX() { return this.x + 16; }
-        private int listWidth() { return Math.clamp(this.width * 2L / 5, 220, 270); }
+        private int listWidth() { return Math.min(270, Math.max(220, this.width * 2 / 5)); }
+        private int entryIconSize() { return Math.clamp((this.height - 106) / 4, 28, 34); }
+        private int entryRowY(int index) { return this.y + 76 + index * (this.entryIconSize() + 6); }
         private int boardX() { return this.x + this.listWidth() + 20; }
         private int boardWidth() { return this.width - this.listWidth() - 36; }
         private int boardCenterX() { return this.boardX() + this.boardWidth() / 2; }
-        private int boardCenterY() { return this.y + 150; }
+        private int boardCenterY() { return this.y + 64 + (this.height - 76) / 2; }
         private int boardInnerWidth() { return 122; }
 
         private Cell cell(int number) {
-            int size = Math.clamp((this.boardWidth() - 72) / 7, 34, 46);
-            int gap = 7;
+            int widthSize = (this.boardWidth() - 48) / 6;
+            int heightSize = (this.height - 92) / 5;
+            int size = Math.clamp(Math.min(widthSize, heightSize), 26, 42);
+            int gap = 5;
             int step = size + gap;
             int outerSize = size * 5 + gap * 4;
             int left = this.boardCenterX() - outerSize / 2;
